<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>cls.atoll.motu</groupId>
  <artifactId>motu-authorization</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>motu-authorization</name>
  
  	<properties>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
		<jdk.source.version>1.6</jdk.source.version>
		<jdk.source.encoding>ISO-8859-1</jdk.source.encoding>     		
	</properties>
  
  	<dependencies>
  	
  	
  		<dependency>
		   <groupId>org.jasig.cas.client</groupId>
		   <artifactId>cas-client-core</artifactId>
		   <version>3.1.11</version>
		   <scope>runtime</scope>
		   <type>jar</type>
		</dependency>
  	
  	
  	</dependencies>
  	
  	
  	<build>
		<resources>
     		<resource>
       			<directory>src/main/resources</directory>
     		</resource>
   		</resources> 
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ftp</artifactId>
				<version>1.0-beta-6</version>
			</extension>
		</extensions>
		
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<id>bind-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<createChecksum>true</createChecksum>
				</configuration>
			</plugin>           
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.2</version>
				<dependencies>
					<dependency>
						<groupId>cls.atoll</groupId>
						<artifactId>atoll-build-tools</artifactId>
						<version>1.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
		
	</build>
	
	
		<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<siteDirectory>${basedir}/motu-parent/src/site</siteDirectory>
					<locales>en</locales>
					<outputEncoding>UTF-8</outputEncoding>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<additionalJOption>-J-Xmx1024m -J-XX:MaxPermSize=512m</additionalJOption>
					<aggregate>true</aggregate>				
					<linksource>true</linksource>
					<tags>
                        <tag>
                            <name>todo</name>
                            <placement>a</placement>
                            <head>To do:</head>
                        </tag>
						<tag>
							<name>pre</name>
							<placement>cm</placement>
							<head>Precondition:</head>
						</tag>
						<tag>
							<name>uc</name>
							<placement>t</placement>
							<head>Use case:</head>
						</tag>
                    </tags>		
					<links>
						<link>http://java.sun.com/javase/6/docs/api/</link>
						<link>http://java.sun.com/products/servlet/2.5/docs/servlet-2_5-mr2/</link>
						<link>http://static.springframework.org/spring/docs/2.5.x/api/</link>
						<link>http://static.springframework.org/spring-security/site/apidocs/</link>
						<link>http://logging.apache.org/log4j/docs/api/</link>
			            <link>http://jakarta.apache.org/commons/logging/apidocs/</link>
			            <link>http://junit.sourceforge.net/javadoc/</link>
			            <link>http://aopalliance.sourceforge.net/doc/</link>
			            <link>http://tomcat.apache.org/tomcat-5.5-doc/servletapi/</link>
			            <link>http://tomcat.apache.org/tomcat-5.5-doc/catalina/docs/api/</link>
			            <link>http://jetty.codehaus.org/jetty/jetty-6/apidocs/</link>
						<link>http://www.slf4j.org/apidocs/</link>
					</links>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>javadoc</report>
							<!--<report>test-javadoc</report>-->
						</reports>
					</reportSet>
				</reportSets>						
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changelog-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<type>range</type>
					<range>90</range>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.1.2</version>
				<configuration>
					<aggregate>true</aggregate>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled> 
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	
	<repositories>
		<repository>
			<id>sfnet-motu-repo</id>
			<name>SourceForge Project Repository</name>
			<url>http://cls-motu.sourceforge.net/m2repo</url>
		</repository>
		<repository>
			<id>cls-to-ext-repo</id>
			<name>CLS External Repository</name>
			<url>http://mvnrepo-ext.cls.fr/nexus/content/repositories/cls-to-ext/</url>
		</repository>
		<repository>
			<id>central</id>
			<name>Maven Central Repository</name>
			<url>http://repo2.maven.org/maven2</url>
		</repository>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
		</repository>

	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>Codehaus repository</id>
			<url>https://nexus.codehaus.org/content/repositories/releases</url>
			<!-- <url>http://repository.codehaus.org/</url>-->
		</pluginRepository>
	</pluginRepositories>
	
	<scm>
		<connection>scm:svn:https://cls-motu.svn.sourceforge.net/svnroot/cls-motu/trunk/motu-authorization</connection>
		<url>https://cls-motu.svn.sourceforge.net/svnroot/cls-motu/trunk/motu-authorization</url>
	</scm>
	<url>http://cls-motu.sourceforge.net/</url>
	
	<issueManagement>
		<system>Sourceforge</system>
		<url>https://sourceforge.net/tracker/?group_id=322177</url>
	</issueManagement>	
	
	<organization>
		<name>CLS (Collecte Localisation Satelite)</name>
		<url>http://www.cls.fr</url>
	</organization>
	
	<licenses>
		<license>
			<name>GNU Lesser General Public License (LGPL)</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
			<distribution>repo</distribution>
			<comments>A business-friendly Open Source license</comments>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<id>mhebert</id>
			<name>Mathieu HEBERT</name>
			<email>mhebert@cls.fr</email>
			<organization>Akka Technologies</organization>
			<organizationUrl>http://www.akka.eu</organizationUrl>
			<roles>
				<role>Main Developer</role>
			</roles>
			<timezone>+1</timezone>
			<properties />
		</developer>
	</developers>
	
	<profiles>
		<profile>
			<id>release-sfnet</id>
			<distributionManagement>
				<site>
					<id>sfnet-motu-repo</id>
					<url>scp://shell.sourceforge.net//home/groups/c/cl/cls-motu/htdocs</url>
				</site>
				<repository>
					<id>sfnet-motu-repo</id>
					<url>scp://shell.sourceforge.net//home/groups/c/cl/cls-motu/htdocs/m2repo</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>release-cls-nexus</id>
			<distributionManagement>
				<repository>
					<id>cls-to-ext-repo</id>
					<url>http://mvnrepo-ext.cls.fr/nexus/content/repositories/cls-to-ext/</url>
				</repository>
			</distributionManagement>
		</profile>
		<profile>
			<id>release-cls-ftpsedr</id>
			<distributionManagement>
				<repository>
					<id>cls-ftpsedr-repo</id>
					<url>ftp://majsedr.cls.fr/donnees/ftpsedr/ftpanonymous/pub/myocean/</url>
				</repository>
			</distributionManagement>			
		</profile>
	</profiles>
 
  
</project>